// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlaybackCard > should match snapshot as disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
      >
        <div
          class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
        >
          <div>
            <img
              alt=""
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
              style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
              width="0"
            />
            <div
              class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
            />
          </div>
          <div
            class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
          >
            <h3
              class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
            >
              <p
                class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
              >
                Track 1
              </p>
              <p
                class="max-w-[380px] truncate text-neutral-300"
              >
                Darkthrone
              </p>
            </h3>
            <div
              class="flex w-full items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="relative h-[28px] w-[28px] overflow-hidden"
                >
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                  />
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                  disabled=""
                >
                  <svg
                    class="ml-[1px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex min-w-max flex-row gap-2"
              >
                <button
                  data-state="closed"
                >
                  <a
                    class="cursor-pointer"
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <svg
                      class="min-w-[20px] h-[20px]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 496 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                      />
                    </svg>
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
    >
      <div
        class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
      >
        <div>
          <img
            alt=""
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
            style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
            width="0"
          />
          <div
            class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
          />
        </div>
        <div
          class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
        >
          <h3
            class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
          >
            <p
              class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
            >
              Track 1
            </p>
            <p
              class="max-w-[380px] truncate text-neutral-300"
            >
              Darkthrone
            </p>
          </h3>
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="relative h-[28px] w-[28px] overflow-hidden"
              >
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                disabled=""
              >
                <svg
                  class="ml-[1px]"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex min-w-max flex-row gap-2"
            >
              <button
                data-state="closed"
              >
                <a
                  class="cursor-pointer"
                  href="https://spotify.com"
                  target="_blank"
                >
                  <svg
                    class="min-w-[20px] h-[20px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 496 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                    />
                  </svg>
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlaybackCard > should match snapshot as optimistically paused 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
      >
        <div
          class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
        >
          <div>
            <img
              alt=""
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
              style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
              width="0"
            />
            <div
              class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
            />
          </div>
          <div
            class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
          >
            <h3
              class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
            >
              <p
                class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
              >
                Track 1
              </p>
              <p
                class="max-w-[380px] truncate text-neutral-300"
              >
                Darkthrone
              </p>
            </h3>
            <div
              class="flex w-full items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="relative h-[28px] w-[28px] overflow-hidden"
                >
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                  />
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                  disabled=""
                >
                  <svg
                    class="ml-[1px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex min-w-max flex-row gap-2"
              >
                <button
                  data-state="closed"
                >
                  <a
                    class="cursor-pointer"
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <svg
                      class="min-w-[20px] h-[20px]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 496 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                      />
                    </svg>
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
    >
      <div
        class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
      >
        <div>
          <img
            alt=""
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
            style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
            width="0"
          />
          <div
            class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
          />
        </div>
        <div
          class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
        >
          <h3
            class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
          >
            <p
              class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
            >
              Track 1
            </p>
            <p
              class="max-w-[380px] truncate text-neutral-300"
            >
              Darkthrone
            </p>
          </h3>
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="relative h-[28px] w-[28px] overflow-hidden"
              >
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                disabled=""
              >
                <svg
                  class="ml-[1px]"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex min-w-max flex-row gap-2"
            >
              <button
                data-state="closed"
              >
                <a
                  class="cursor-pointer"
                  href="https://spotify.com"
                  target="_blank"
                >
                  <svg
                    class="min-w-[20px] h-[20px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 496 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                    />
                  </svg>
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlaybackCard > should match snapshot as optimistically resumed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-xl border text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] border-success bg-success"
      >
        <div
          class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
        >
          <div>
            <img
              alt=""
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
              style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
              width="0"
            />
            <div
              class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
            />
          </div>
          <div
            class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
          >
            <h3
              class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
            >
              <p
                class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
              >
                Track 1
              </p>
              <p
                class="max-w-[380px] truncate text-neutral-300"
              >
                Darkthrone
              </p>
            </h3>
            <div
              class="flex w-full items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="relative h-[28px] w-[28px] overflow-hidden"
                >
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px]"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px]"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px]"
                  />
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex min-w-max flex-row gap-2"
              >
                <button
                  data-state="closed"
                >
                  <a
                    class="cursor-pointer"
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <svg
                      class="min-w-[20px] h-[20px]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 496 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                      />
                    </svg>
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-xl border text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] border-success bg-success"
    >
      <div
        class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
      >
        <div>
          <img
            alt=""
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
            style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
            width="0"
          />
          <div
            class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
          />
        </div>
        <div
          class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
        >
          <h3
            class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
          >
            <p
              class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
            >
              Track 1
            </p>
            <p
              class="max-w-[380px] truncate text-neutral-300"
            >
              Darkthrone
            </p>
          </h3>
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="relative h-[28px] w-[28px] overflow-hidden"
              >
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px]"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px]"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px]"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex min-w-max flex-row gap-2"
            >
              <button
                data-state="closed"
              >
                <a
                  class="cursor-pointer"
                  href="https://spotify.com"
                  target="_blank"
                >
                  <svg
                    class="min-w-[20px] h-[20px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 496 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                    />
                  </svg>
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlaybackCard > should match snapshot as paused 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
      >
        <div
          class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
        >
          <div>
            <img
              alt=""
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
              style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
              width="0"
            />
            <div
              class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
            />
          </div>
          <div
            class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
          >
            <h3
              class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
            >
              <p
                class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
              >
                Track 1
              </p>
              <p
                class="max-w-[380px] truncate text-neutral-300"
              >
                Darkthrone
              </p>
            </h3>
            <div
              class="flex w-full items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="relative h-[28px] w-[28px] overflow-hidden"
                >
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px]"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px]"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px]"
                  />
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                >
                  <svg
                    class="ml-[1px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex min-w-max flex-row gap-2"
              >
                <button
                  data-state="closed"
                >
                  <a
                    class="cursor-pointer"
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <svg
                      class="min-w-[20px] h-[20px]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 496 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                      />
                    </svg>
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-xl border border-card text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] bg-neutral-800/50"
    >
      <div
        class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
      >
        <div>
          <img
            alt=""
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
            style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
            width="0"
          />
          <div
            class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
          />
        </div>
        <div
          class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
        >
          <h3
            class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
          >
            <p
              class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
            >
              Track 1
            </p>
            <p
              class="max-w-[380px] truncate text-neutral-300"
            >
              Darkthrone
            </p>
          </h3>
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="relative h-[28px] w-[28px] overflow-hidden"
              >
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px]"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px]"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px]"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
              >
                <svg
                  class="ml-[1px]"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex min-w-max flex-row gap-2"
            >
              <button
                data-state="closed"
              >
                <a
                  class="cursor-pointer"
                  href="https://spotify.com"
                  target="_blank"
                >
                  <svg
                    class="min-w-[20px] h-[20px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 496 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                    />
                  </svg>
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PlaybackCard > should match snapshot as resumed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="rounded-xl border text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] border-success bg-success"
      >
        <div
          class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
        >
          <div>
            <img
              alt=""
              class="rounded-md"
              data-nimg="1"
              decoding="async"
              height="0"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
              style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
              width="0"
            />
            <div
              class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
            />
          </div>
          <div
            class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
          >
            <h3
              class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
            >
              <p
                class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
              >
                Track 1
              </p>
              <p
                class="max-w-[380px] truncate text-neutral-300"
              >
                Darkthrone
              </p>
            </h3>
            <div
              class="flex w-full items-center justify-between"
            >
              <div
                class="flex items-center gap-2"
              >
                <div
                  class="relative h-[28px] w-[28px] overflow-hidden"
                >
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                  />
                  <span
                    class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                  />
                </div>
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex min-w-max flex-row gap-2"
              >
                <button
                  data-state="closed"
                >
                  <a
                    class="cursor-pointer"
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <svg
                      class="min-w-[20px] h-[20px]"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 496 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                      />
                    </svg>
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="rounded-xl border text-card-foreground shadow !m-0 h-full w-full p-4 lg:w-[380px] xl:w-2/5 xl:min-w-[380px] border-success bg-success"
    >
      <div
        class="flex w-full flex-col gap-4 space-y-0 p-0 sm:flex-row"
      >
        <div>
          <img
            alt=""
            class="rounded-md"
            data-nimg="1"
            decoding="async"
            height="0"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=16&q=75 1x"
            style="color: transparent; min-height: 0px; max-height: 0px; min-width: 0px; max-width: 0px; object-fit: cover;"
            width="0"
          />
          <div
            class="animate-pulse rounded-md bg-muted/50 h-[128px] w-[128px]"
          />
        </div>
        <div
          class="flex w-full flex-col justify-between gap-4 md:max-w-[calc(100%-140px)] md:gap-0"
        >
          <h3
            class="leading-none tracking-tight flex flex-col gap-1 whitespace-nowrap font-normal"
          >
            <p
              class="inline-block overflow-hidden text-ellipsis whitespace-nowrap text-2xl"
            >
              Track 1
            </p>
            <p
              class="max-w-[380px] truncate text-neutral-300"
            >
              Darkthrone
            </p>
          </h3>
          <div
            class="flex w-full items-center justify-between"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="relative h-[28px] w-[28px] overflow-hidden"
              >
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-0 animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[8px] animation-delay-[0.6s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[16px] animation-delay-[0.3s] animate-up-down"
                />
                <span
                  class="absolute h-[28px] w-[4px] bg-white transition-all ease-linear left-[24px] animation-delay-[0.9s] animate-up-down"
                />
              </div>
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 cursor-pointer hover:bg-primary-light hover:text-primary-foreground h-9 w-9 rounded-full"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex min-w-max flex-row gap-2"
            >
              <button
                data-state="closed"
              >
                <a
                  class="cursor-pointer"
                  href="https://spotify.com"
                  target="_blank"
                >
                  <svg
                    class="min-w-[20px] h-[20px]"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 496 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"
                    />
                  </svg>
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
